// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot - screen 1`] = `
<div
  data-testid="div-app-01"
>
  <h1
    data-testid="Test-01"
  >
     Mongi 
  </h1>
  <h3
    class="mi-clase"
  >
     Hermosa 
  </h3>
  <h1>
    Hello, 
    Gaby
    !
  </h1>
  <h3>
    Jhonny
     :3
  </h3>
  <p
    style="background-color: rgb(106, 106, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
  >
    {"zipCode":"ABC-123","country":"Canadá"}
  </p>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app-01"
  >
    <h1
      data-testid="Test-01"
    >
       Mongi 
    </h1>
    <h3
      class="mi-clase"
    >
       Hermosa 
    </h3>
    <h1>
      Hello, 
      Gaby
      !
    </h1>
    <h3>
      Jhonny
       :3
    </h3>
    <p
      style="background-color: rgb(106, 106, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
    >
      {"zipCode":"ABC-123","country":"Canadá"}
    </p>
  </div>
</div>
`;
